Fixed a bug in CSS where background was not vertically covering the page when scrolling down large pages.   Next step needs to be to figure out why ps_neutral_@2X.png will not display properly under some conditions.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,10 @@
 .window {
   background-image: url("/images/brickwall_@2X.png");
   background-attachment: fixed;
+  min-height:100%;
+  min-width: 100%;
+  top:0;
+  left:0;
   }
 
 #content {
